micromobility_car_navigation/local/Project/dev_ws/log/build_2021-04-01_11-50-43/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py", line 36
    if msg.data < self.proximity:
                                ^
SyntaxError: invalid syntax

